# exp_rocket

./: .env  Cargo.toml  README.md  Rocket.toml
migrations/2021-06-04-092721_create_users/: up.sql
src/: hbs.rs  main.rs  main_old.rs  models.rs
templates/: admin.html.tera  index.html copy.tera  index.html.tera  layout.html.tera  new_user.html.tera  user.html.tera
templates/hbs/base/: app.hbs  footer.hbs  header.hbs  leftside.hbs  main.hbs  rightside.hbs
templates/hbs/pages/: admin.hbs
templates/hbs/parts/: about.hbs  carousel_images.hbs  courses_card.hbs  events_card.hbs  faculity_card.hbs  news.hbs
templates_old/: admin.html.tera  header_b.html.tera  index.html.tera  new_user.html.tera  user.html.tera  user_not_found.html.tera  users.html.tera
templates_old/hbs/: index.html.hbs
